Fixed proceed btn on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ body {
     border: none;
     border-radius: .5rem;
     box-shadow: 0px 12px 15px 0px hsl(224, 23%, 55%);
-    padding: 1rem 4.5rem;
+    padding: 1rem 0rem;
     background-color: hsl(245, 75%, 52%);
     color: hsl(0, 0%, 95%);
     font-size: .9rem;
